custom-elements: Fix a DCHECK failure with external/wpt/custom-elements/upgrading/Node-cloneNode.html.

V0CustomElementRegistrationContext::SetTypeExtension() is not
expected to be called for autonomous custom elements. Element::
AttributeChangedFromParserOrByCloning() should check it.

Bug: 805061
Change-Id: Ie91256bb6b6b8671d4a6a65374db31394a08d2ea
Reviewed-on: https://chromium-review.googlesource.com/897169
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Commit-Queue: Kent Tamura <tkent@chromium.org>
Cr-Commit-Position: refs/heads/master@{#533972}