third_party/WebKit/Source/core/dom/Element.cpp
@@ -1506,7 +1506,7 @@ inline void Element::AttributeChangedFromParserOrByCloning(
     const QualifiedName& name,
     const AtomicString& new_value,
     AttributeModificationReason reason) {
-  if (name == isAttr)
+  if (name == isAttr && !V0CustomElement::IsValidName(localName()))
     V0CustomElementRegistrationContext::SetTypeExtension(this, new_value);
   AttributeChanged(
       AttributeModificationParams(name, g_null_atom, new_value, reason));
